components/policies/pod-security-standards/restricted/restrict-volume-types/test/deployment-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          gcePersistentDisk:
            pdName: gke-pv
            fsType: ext4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          awsElasticBlockStore:
            volumeID: vol-f37a03aa
            fsType: ext4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          gitRepo:
            repository: https://github.com/kyverno/kyverno
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          nfs:
            path: /data
            server: 10.105.68.50
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          iscsi:
            lun: 0
            iqn: iqn.1998-01.com.vmware:w1-hs3-n2503.eng.vmware.com:452738760:67
            targetPortal: 10.105.68.50:3260
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          glusterfs:
            endpoints: test
            path: /data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          rbd:
            image: foo
            monitors:
              - foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment08
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          flexVolume:
            driver: foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment09
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          cinder:
            volumeID: my-vol
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          cephfs:
            monitors:
              - foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          flocker:
            datasetName: fooset
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          fc:
            wwids:
              - fooid.corp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment13
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          azureFile:
            secretName: foosecret
            shareName: fooshare
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment14
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          vsphereVolume:
            volumePath: /foo/disk.vmdk
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment15
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          quobyte:
            registry: 10.80.90.100:1111
            volume: foovol
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment16
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          azureDisk:
            kind: Managed
            diskName: foodisk
            diskURI: /subscriptions/123456/resourceGroups/MC_myAKSCluster_myAKSCluster_eastus/providers/Microsoft.Compute/disks/myAKSDisk
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment17
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          portworxVolume:
            volumeID: myportvol
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment18
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          scaleIO:
            gateway: https://localhost:443/api
            system: scaleio
            volumeName: vol-0
            secretRef:
              name: sio-secret
            fsType: xfs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment19
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          storageos:
            volumeName: foovol
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment20
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          photonPersistentDisk:
            pdID: fooid.corp
---
