components/policies/pod-security-standards/restricted/restrict-volume-types/test/job-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob01
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          gcePersistentDisk:
            pdName: gke-pv
            fsType: ext4
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob02
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          awsElasticBlockStore:
            volumeID: vol-f37a03aa
            fsType: ext4
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob03
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          gitRepo:
            repository: https://github.com/kyverno/kyverno
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob04
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          nfs:
            path: /data
            server: 10.105.68.50
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob05
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          iscsi:
            lun: 0
            iqn: iqn.1998-01.com.vmware:w1-hs3-n2503.eng.vmware.com:452738760:67
            targetPortal: 10.105.68.50:3260
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob06
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          glusterfs:
            endpoints: test
            path: /data
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob07
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          rbd:
            image: foo
            monitors:
              - foo
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob08
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          flexVolume:
            driver: foo
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob09
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          cinder:
            volumeID: my-vol
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob10
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          cephfs:
            monitors:
              - foo
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob11
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          flocker:
            datasetName: fooset
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob12
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          fc:
            wwids:
              - fooid.corp
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob13
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          azureFile:
            secretName: foosecret
            shareName: fooshare
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob14
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          vsphereVolume:
            volumePath: /foo/disk.vmdk
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob15
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          quobyte:
            registry: 10.80.90.100:1111
            volume: foovol
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob16
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          azureDisk:
            kind: Managed
            diskName: foodisk
            diskURI: /subscriptions/123456/resourceGroups/MC_myAKSCluster_myAKSCluster_eastus/providers/Microsoft.Compute/disks/myAKSDisk
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob17
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          portworxVolume:
            volumeID: myportvol
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob18
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          scaleIO:
            gateway: https://localhost:443/api
            system: scaleio
            volumeName: vol-0
            secretRef:
              name: sio-secret
            fsType: xfs
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob19
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          storageos:
            volumeName: foovol
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob20
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          photonPersistentDisk:
            pdID: fooid.corp
---
