components/policies/pod-security-standards/restricted/restrict-volume-types/test/job-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob01
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob02
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: udev
              mountPath: /data
      volumes:
        - name: udev
          emptyDir: {}
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob03
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: mysettings
              mountPath: /settings
      volumes:
        - name: mysettings
          configMap:
            name: settings
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob04
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: warehouse
              mountPath: /warehouse
      volumes:
        - name: warehouse
          csi:
            driver: disk.csi.azure.com
            readOnly: true
            fsType: xfs
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob05
spec:
  template:
    metadata:
      labels:
        foo: bar
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: labels
              mountPath: /labels
      volumes:
        - name: labels
          downwardAPI:
            items:
              - path: labels
                fieldRef:
                  fieldPath: metadata.labels
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob06
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: ephem
              mountPath: /ephem
      volumes:
        - name: ephem
          ephemeral:
            volumeClaimTemplate:
              metadata:
                labels:
                  type: my-frontend-volume
              spec:
                accessModes: [ "ReadWriteOnce" ]
                storageClassName: "scratch-storage-class"
                resources:
                  requests:
                    storage: 1Gi
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob07
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - name: foo
              mountPath: /foo
      volumes:
        - name: foo
          persistentVolumeClaim:
            claimName: fooclaim
            readOnly: true
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob08
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - mountPath: /var/run/secrets/tokens
              name: vault-token
      volumes:
        - name: vault-token
          projected:
            sources:
              - serviceAccountToken:
                  path: vault-token
                  expirationSeconds: 7200
                  audience: vault
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob09
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          volumeMounts:
            - mountPath: /mysecret
              name: mysecret
      volumes:
        - name: mysecret
          secret:
            secretName: mysecret
---
